--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -24,5 +24,18 @@ jobs:
         cache: gradle
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
+    - name: Run coverage
+      run: ./gradlew clean codeCoverageReport
+
+      # Runs a set of commands using the runners shell
+      #- uses: actions/checkout@main
+    - uses: codecov/codecov-action@v2
+      with:
+        token: ${{ secrets.CODECOV_TOKEN }} # not required for public repos
+        files: ./build/reports/jacoco/report.xml
+        flags: unittests # optional
+        name: codecov-umbrella # optional
+        fail_ci_if_error: true # optional (default = false)
+        verbose: true # optional (default = false)      
     - name: Build with Gradle
       run: ./gradlew build
