--- a/otel-resource/build.gradle
+++ b/otel-resource/build.gradle
@@ -2,8 +2,9 @@ plugins {
     id 'java'
     id 'maven-publish'
     id 'java-library'
+    id 'jacoco'
 }
-
+apply plugin: 'java'
 apply from: "${rootProject.projectDir}/gradle/spotless.gradle"
 repositories {
     mavenCentral()
@@ -21,9 +22,6 @@ dependencies {
     testImplementation 'com.linecorp.armeria:armeria-junit5:1.11.0'
 }
 
-test {
-    useJUnitPlatform()
-}
 publishing {
     publications {
         maven(MavenPublication) {
@@ -32,3 +30,7 @@ publishing {
         }
     }
 }
+test {
+    useJUnitPlatform()
+}
+
