Changes for java agent distro (#5)
* sdk-init:  Initial-commit

* sdk-init:  Test for LMResourceDetector

* sdk-init:  Adding Gradle wrapper

* sdk-init:  Added badge

* sdk-init:  Added Code Coverage Report and sporbugs

* sdk-init:  Added codecov badge

* sdk-init:  Added Code for Agent

Co-authored-by: Gaurang Patel <gaurang.patel@logicmonitor.com>

--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,11 @@ allprojects {
     version = "0.1.0-alpha"
 
     apply from: "${rootProject.projectDir}/gradle/spotbugs.gradle"
+
+    compileJava {
+        options.release.set(8)
+    }
+
 }
 ext {
     versions = [
