Changed agent jar name (#6)
* sdk-init:  Initial-commit

* sdk-init:  Test for LMResourceDetector

* sdk-init:  Adding Gradle wrapper

* sdk-init:  Added badge

* sdk-init:  Added Code Coverage Report and sporbugs

* sdk-init:  Added codecov badge

* sdk-init:  Added Code for Agent

* sdk-init:  Changed artifact name

* sdk-init:  codecov exclude project

* sdk-init:  Changes for licence

* sdk-init:  Removed java version constraint

Co-authored-by: Gaurang Patel <gaurang.patel@logicmonitor.com>

--- a/build.gradle
+++ b/build.gradle
@@ -11,16 +11,8 @@ apply from: "${scriptDir}/spotless.gradle"
 //apply from: "${scriptDir}/jacoco.gradle"
 
 allprojects {
-    apply plugin :'java'
     group = "com.logicmonitor"
     version = "0.1.0-alpha"
-
-    apply from: "${rootProject.projectDir}/gradle/spotbugs.gradle"
-
-    compileJava {
-        options.release.set(8)
-    }
-
 }
 ext {
     versions = [
@@ -73,6 +65,11 @@ task codeCoverageReport(type: JacocoReport) {
 }
 
 codeCoverageReport.dependsOn {
-    allprojects*.test
+    getAllprojects()
+            .collect {
+                if(!it.name.equals("lm-agent")){
+                     return it.getTasksByName("test",true);
+                }
+            }.findAll();
 
 }
