--- a/lm-agent/agent/build.gradle
+++ b/lm-agent/agent/build.gradle
@@ -39,8 +39,11 @@ tasks {
         mergeServiceFiles {
             include("inst/META-INF/services/*")
         }
+        processResources
         exclude("**/module-info.class")
-
+        exclude("**/META-INF/*.DSA")
+        exclude("**/META-INF/*.SF")
+        processResources
         relocatePackages(it)
 
         manifest {
@@ -52,9 +55,16 @@ tasks {
             attributes.put("Implementation-Vendor", "LogicMonitor")
             attributes.put("Implementation-Version", "logicmonitor-${project.version}-otel-${versions.opentelemetryJavaagent}")
         }
+
+        archiveBaseName ="lm-agent"
     }
 
     assemble {
         dependsOn(shadowJar)
+    }
+    processResources {
+        from(rootProject.file("LICENSE")) {
+            into("META-INF/")
+        }
     }
 }
