Changes for lambda resource detection (#7)
* added classes and javaagent layer for lambda resource detection

* removed extra include

* code refactoring

* removed Fass.id as we have account id and version.

* added readme for javaagent layer

* Implemented review comments.

* Resolved Spotless issue.

Co-authored-by: Shraddha Dondekar <shraddha.dondekar@logicmonitor.com>
Co-authored-by: Gaurang Patel <mr.patelgaurang@gmail.com>

--- a/otel-resource/build.gradle
+++ b/otel-resource/build.gradle
@@ -20,6 +20,9 @@ dependencies {
     implementation("com.fasterxml.jackson.core:jackson-core:2.12.3")
     implementation("com.fasterxml.jackson.core:jackson-databind:2.12.3")
     testImplementation 'com.linecorp.armeria:armeria-junit5:1.11.0'
+    implementation 'com.amazonaws:aws-java-sdk-sts:1.12.148'
+    testImplementation 'org.mockito:mockito-junit-jupiter:4.3.1'
+    implementation 'org.slf4j:slf4j-api:1.7.25'
 }
 
 publishing {
