--- a/settings.gradle
+++ b/settings.gradle
@@ -9,4 +9,5 @@ include 'lm-agent:agent'
 findProject(':lm-agent:agent')?.name = 'agent'
 include 'lm-agent:smoke-tests'
 findProject(':lm-agent:smoke-tests')?.name = 'smoke-tests'
+include 'lm-javaagent-layer'
 
