--- a/otel-resource/build.gradle
+++ b/otel-resource/build.gradle
@@ -23,6 +23,7 @@ dependencies {
     implementation 'com.amazonaws:aws-java-sdk-sts:1.12.148'
     testImplementation 'org.mockito:mockito-junit-jupiter:4.3.1'
     implementation 'org.slf4j:slf4j-api:1.7.25'
+    implementation 'org.json:json:20090211'
 }
 
 publishing {
