GCP Compute Engine Resource Detection Added (#10)
* raw code added for GCP metadata fetching with Warning:(10, 53) Not annotated parameter overrides @ParametersAreNonnullByDefault parameter warning

* added cloud function code

* test cases added for compute engine

* test cases added for compute engine

* format resolved

* unneccesary dependency removed

* unneccesary dependency removed

Co-authored-by: Shivam Jaiswal <shivam.jaiswal@logicmonitor.com>

--- a/otel-resource/build.gradle
+++ b/otel-resource/build.gradle
@@ -11,6 +11,7 @@ repositories {
 }
 
 dependencies {
+    implementation group: 'com.squareup.okhttp3', name: 'okhttp', version: '3.2.0'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
     api("io.opentelemetry:opentelemetry-sdk-extension-aws:${versions.opentelemetry}")
@@ -24,6 +25,10 @@ dependencies {
     testImplementation 'org.mockito:mockito-junit-jupiter:4.3.1'
     implementation 'org.slf4j:slf4j-api:1.7.25'
     implementation 'org.json:json:20090211'
+    implementation 'com.linecorp.armeria:armeria-junit5:1.6.0'
+    testImplementation group: 'com.squareup.okhttp3', name: 'mockwebserver', version: '3.2.0'
+    testImplementation 'org.hamcrest:hamcrest:2.2'
+    implementation group: 'org.junit-pioneer', name: 'junit-pioneer', version: '0.7.0'
 }
 
 publishing {
